# SkyNet

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  copy_clang_complete_files.cmake  main.cpp  protocol.cpp  protocol.h  skynet.cpp  skynet.h
code/cmake/: copy_clang_complete.cmake  copy_clang_complete_files.cmake
code/modules/gd/: CMakeLists.txt  gd.cpp  gd.h
code/modules/nn/: CMakeLists.txt  nn.cpp  nn.h  nn_init.gdb  test_nn.cpp
code/modules/pla/: CMakeLists.txt  pla.cpp  pla.h
code/modules/sgd/: .clang_complete  CMakeLists.txt  sgd.cpp  sgd.h
code/modules/svm/: CMakeLists.txt  svm.cpp  svm.h
code/os/linux/: os_inc.cpp  os_inc.h
code/scripts/: profile.stp
code/tests/: mnistClassification.cpp  mnistClassification.h  randomPointsClassification.cpp  randomPointsClassification.h  test_commandline.cpp  tests.h
data/mnist/: get_mnist.sh
doc/: project.tex
lib/opencl/: OpenCL.exp  OpenCL.lib
